font change, alignment fixes

--- a/src/app/components/character/character.component.css
+++ b/src/app/components/character/character.component.css
@@ -4,7 +4,7 @@ ul {
     justify-content: space-around;
     width: 100%;
     list-style: none;
-    padding: 1em;
+    padding: 1em 0;
 }
 
 li {
@@ -13,11 +13,11 @@ li {
     justify-content: center;
     align-items: center;
     opacity: 0.7;
-    transition: 0.3s all ease-in-out;
+    transition: 0.4s all ease-in-out;
 }
 li:hover {
     opacity: 1;
-    transform: scale(1.1);
+    transform: scale(1.01);
 }
 
 .img-container {
