--- a/src/styles.css
+++ b/src/styles.css
@@ -14,9 +14,12 @@ html {
 
 body {
     background-color: black;
-    color: chartreuse;
+    /* color: chartreuse;
     font-family: monospace;
-    font-weight: 100;
+    font-weight: 100; */
+    color: black;
+    font-family: 'Star Jedi Outline', 'Distant Galaxy';
+    text-shadow: -1px 0 gold, 0 1px gold, 1px 0 gold, 0 -1px gold;
     height: 100vh;
     display: flex;
     flex-flow: column nowrap;
@@ -26,13 +29,11 @@ body {
 
 header {
     flex: 1 1 10%;
-    color: black;
     text-shadow: -1px 0 gold, 0 1px gold, 1px 0 black, 0 -1px black;
     border: 1px solid gold;
     border-radius: 1em;
     width: 50vw;
     font-size: 8vw;
-    font-family: 'Star Jedi Outline', 'Distant Galaxy';
     cursor: default;
 }
 
